--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,6 +9,7 @@
                 <i><a class="navListItem" href="/users/perfil"> Mi perfil </a></i>
                 <i><a class="navListItem"  href="#"> Privacidad </a></i>
                 <i><a class="navListItem" href="/users/logout"> Cerrar sesión </a></i>
+                <i><a class="navListItem" href="/faqs"> Preguntas Frecuentes </a></i>
             </ul>
         </nav>
     </div>
