--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,6 +2,8 @@
 <%- include('./partials/head.ejs') %>
 <body class="gradient">
 
+
+  Illustration by <a href="https://icons8.com/illustrations/author/5dbbfa4a01d0360016456d51">Murat Kalkavan</a> from <a href="https://icons8.com/illustrations">Ouch!</a>
     <form action="/users/login" method="POST" class="login-form">
       <h1> Iniciar Sesión </h1>
       <div>
