--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -4,7 +4,7 @@
         <a href="">Contacto</a>
         <a href="">Privacidad</a>
         <a href="">Condiciones</a>
-        <a href="">Faq</a></p>
+        <a href="/index/faq">Faq</a></p>
     </div>
     <div class="contact-us">
         <p>Una producción de Leonardo Lopez</p>
