modificado nombre en footer y borrados gifs de rem y ram

--- a/views/preguntas.ejs
+++ b/views/preguntas.ejs
@@ -81,7 +81,7 @@
         <div>
             <p>Wormhole Plan® 2021</p>
             <p>Desarrollado por grandes mentes para grandes mentes</p>
-            <p>CEO José Leonardo Moreno López</p>
+            <p>CEO José Leonardo López Moreno</p>
             <p>Cofundador Salvador Alberto Mora Avilez</p>
             <p>Cofundador Luis Adrian Rodriguez Valera</p>
             <p>Cofundador Ismael Ruiz Carbajal</p>
@@ -160,8 +160,8 @@
 
         </div>
         
-        <img src="https://c.tenor.com/7WbRvUKO9JUAAAAj/ram-png.gif" alt="ram OwO" style="width: 5%; height: 5%;">
-        <img src="https://media.tenor.com/images/286d272451031e3c68dc46500d644482/tenor.gif" alt="rem  OwO" style="width: 5%; height: 5%;">
+        <!-- <img src="https://c.tenor.com/7WbRvUKO9JUAAAAj/ram-png.gif" alt="ram OwO" style="width: 5%; height: 5%;">
+        <img src="https://media.tenor.com/images/286d272451031e3c68dc46500d644482/tenor.gif" alt="rem  OwO" style="width: 5%; height: 5%;"> -->
         
     </footer>
 
