--- a/views/preguntas.ejs
+++ b/views/preguntas.ejs
@@ -65,13 +65,13 @@
             
 
         </div>
-        <form id="sugerenciaForm" action="/faqs" method="POST">
+        <!-- <form id="sugerenciaForm" action="/faqs" method="POST">
             <label for="titulo">¿Tienes otra pregunta que crees importante y debería estar aquí?, escríbela
                 abajo</label>
             <input type="text" placeholder="Escribe tu pregunta" name="titulo" id="sugerenciaPregunta"
                 autocomplete="on">
             <input type="submit" value="Enviar" id="sugerenciaSubmit">
-        </form>
+        </form> -->
     </div>
     </div>
 
