--- a/views/editarPreguntas.ejs
+++ b/views/editarPreguntas.ejs
@@ -168,10 +168,12 @@
 <script>
 
    
-    const trashcan = document.querySelector('a.delete');
-    trashcan.addEventListener('click', (e) => {
-        const endpoint = `/preguntas/borrar/${trashcan.dataset.doc}`;
+    const trashcan = document.querySelectorAll('.delete');
 
+    trashcan.forEach(trash => {
+        trash.addEventListener('click', (e) => {
+        const endpoint = `/preguntas/borrar/${trash.dataset.doc}`;
+        console.log('click')
         fetch(endpoint, {
             method: 'DELETE'
         })
@@ -179,6 +181,9 @@
         .then((data) => window.location.href=data.redirect)
         .catch(err => console.log(err))
     })
+    });
+
+    
 </script>
 
 </html>
